# ai_agent

./: .gitignore  README.md  pyproject.toml  qwen_agent.py
src/: __init__.py  qwen_agent.py  schemas.py  test_agent.py  test_openai.ipynb
src/agents/: car_mechanic_agent.py  multiple_agents_old.py  timeseries_agent.py
src/db/: database.py  load_timeseries.py  models.py
src/notebooks/: test_openai.ipynb
src/schemas/: car_mechanic.py  timeseries.py
src/tools/: cars.py  timeseries.py
tests/: test_qwen_agent.py
