[project]
name = "qwen-agent"
version = "0.1.0"
description = "A Qwen AI Agent project"
authors = [
    {name = "Your Name",email = "your.email@example.com"}
]
readme = "README.md"
requires-python = "==3.12.5"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-ai>=0.3.1",
    "pydantic-ai-slim[duckduckgo]>=0.3.1",
    "uv (>=0.7.13,<0.8.0)",
    "ipykernel (>=6.30.1,<7.0.0)",
    "openai (>=1.102.0,<2.0.0)",
    "logfire[sqlalchemy] (>=4.7.0,<5.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

